# bio-tarball-to-fastqgz

./: .cruft.json  .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  Jenkinsfile.example  Makefile  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
python_project/: __init__.py  main.py  staging.py  tarmeta.py
tarball_to_fastqgz/: __init__.py  __main__.py  error.py  fileops.py  main.py  rgmeta.py  staging.py  tarmeta.py
tests/unit/: test_main.py  test_rgmeta.py  test_tarmeta.py
