[metadata]
name = tarball_to_fastqgz
description = Extracts fastq data from tarballs and stages them as fastq.gz + json metadata
url = https://github.com/NCI-GDC/bio-tarball-to-fastqgz
author = Tzuni Garcia
author_email = 
python_requires = >=3.6
license_files =
	LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
install_requires =
        pandas
        mgzip

zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
	tarball_to_fastqgz = tarball_to_fastqgz.main:main

